--- a/README.org
+++ b/README.org
@@ -8,7 +8,9 @@ For the moment, All of this is done on a =24-inch iMac (Late 2006)= running a Ma
 
 Here's a link to [[https://cdimage.debian.org/debian-cd/current/amd64/iso-cd/debian-10.0.0-amd64-netinst.iso][Debian 10.10 Net Install]] for latest packages + minimum download/install time. Also [[https://download.virtualbox.org/virtualbox/6.0.10/VirtualBox-6.0.10-132072-OSX.dmg][VirtualBox 6.0]]. Important thing is to allocate exactly =8 GB= with no partitioning!
 
-* Network and Security
+* IN-PROGRESS Network and Security
+
+- State "IN-PROGRESS"                  [2019-08-01 Thu 14:23]
 
 ** Initial Configuration
 
@@ -46,7 +48,29 @@ iface enp0s3 inet static
 
 Finally, we restart the network using =sudo service networking restart= and check that using =ip addr= and look for =enp0s3=
 
-** Configure SSH
+** IN-PROGRESS Configure SSH
+
+- State "IN-PROGRESS" from              [2019-08-01 Thu 14:19]
+
+#+BEGIN_QUOTE
+/Some info about ssh in general/
+#+END_QUOTE
+
+*** Configure default port
+
+SSH could be configured by editing the file =/etc/ssh/sshd_config=
+
+*** Setup public keys
+
+** TODO Configure Firewall
+
+** TODO Configure ports
+
+** TODO Manage Services and Packages
+
+* PENDING Web Deployment
+
+- State "PENDING"                     [2019-08-01 Thu 14:23]
 
 * Footnotes
 
