--- a/README.org
+++ b/README.org
@@ -58,7 +58,21 @@ Finally, we restart the network using =sudo service networking restart= and chec
 
 *** Configure default port
 
-SSH could be configured by editing the file =/etc/ssh/sshd_config=
+SSH could be configured by editing the default port (22) in the file =/etc/ssh/sshd_config=, The port should not be chosen arbitrary (or it might be so. but, it *must not be already used* as it would create conflicts). We can check that using =sudo lsof -i -P -n | grep LISTEN | grep <PORT>=.
+
+However, IANA -- The Internet Assigned Numbers Authority (IANA) is responsible for the global coordination of the DNS Root, IP addressing, and other Internet protocol resources. their port assignment guidelines said the following:
+
+#+BEGIN_QUOTE
+/port numbers are divided into three ranges: Well Known Ports, Registered Ports, and Dynamic and/or Private Ports./
+
+- The Well Known Ports are those from =0= through =1023= and SHOULD NOT be used.
+- Registered Ports are those from =1024= through =49151= should also be avoided too.
+- Dynamic and/or Private Ports are those from 49152 through 65535 and can be used.
+
+Though nothing is stopping you from using reserved port numbers, our suggestion may help avoid technical issues with port allocation in the future.
+#+END_QUOTE
+
+However, I have chosen =1412= since it's my nickname anyway, =0x0584=
 
 *** Setup public keys
 
