--- a/README.org
+++ b/README.org
@@ -63,7 +63,7 @@ SSH could be configured by editing the default port (22) in the file =/etc/ssh/s
 However, IANA -- The Internet Assigned Numbers Authority (IANA) is responsible for the global coordination of the DNS Root, IP addressing, and other Internet protocol resources. their port assignment guidelines said the following:
 
 #+BEGIN_QUOTE
-/port numbers are divided into three ranges: Well Known Ports, Registered Ports, and Dynamic and/or Private Ports./
+/Port numbers are divided into three ranges: Well Known Ports, Registered Ports, and Dynamic and/or Private Ports./
 
 - The Well Known Ports are those from =0= through =1023= and SHOULD NOT be used.
 - Registered Ports are those from =1024= through =49151= should also be avoided too.
@@ -72,24 +72,25 @@ However, IANA -- The Internet Assigned Numbers Authority (IANA) is responsible f
 Though nothing is stopping you from using reserved port numbers, our suggestion may help avoid technical issues with port allocation in the future.
 #+END_QUOTE
 
-However, I have chosen =1412= since it's my nickname anyway, =0x0584=
+I have chosen =2222= as an SSH port
 
-*** Setup acces with public keys
+*** Setup access with public keys
 
 #+BEGIN_QUOTE
 _NOTE:_
 
-The process of creating publib/private key pair is *done on the Mac OS X machine*. Where we're going to send the public key to teh server to know who were are when interacting.
+The process of creating publib/private key pair is *done on the Mac OS X machine*. Where we're going to send the public key to the server to know who were are when interacting.
+
+the command =ssh-copy-id= might not be available on Mac OS X by default, install it via =brew install ssh-copy-id openssh=
 #+END_QUOTE
 
 To generate a public/private (RSA) key pair we need to execute =ssh-keygen -t rsa= where =-t rsa= specifies the type of encryptation to /RSA -- Rivest–Shamir–Adleman Encryptaion Algorithm/. Two files will be generated, =id_rsa= and =id_rsa.pub=, which are /private/ and /public/ key respectively.
 
-Next step is to copy the =id_rsa.pub= to the server using =ssh-copy-id= (WHAT! THEY HAVE COMMAND FOR THAT TOO!) as =ssh-copy-id -i id_rsa.pub <USER>@<IP> -p <PORT>=. In my case, USER is =archid-= IP is =10.11.200.247= and PORT is =1412=.
+Next step is to copy the =id_rsa.pub= to the server using =ssh-copy-id= (WHAT! THEY HAVE COMMAND FOR THAT TOO!) as =ssh-copy-id -i id_rsa.pub <USER>@<IP> -p <PORT>=. In my case, USER is =archid-= IP is =10.11.200.247= and PORT is =2222=.
 
-#+BEGIN_QUOTE
 This result the addition of the key to the server's =~/.ssh/authorized_keys=
-#+END_QUOTE>
 
+Now, we need to remove root login permit, and password authentification by editing =/etc/ssh/sshd.config=
 
 
 ** TODO Configure Firewall
